tests/baselines/reference/selfRef.errors.txt
selfRef.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
selfRef.ts(8,8): error TS2304: Cannot find name 'name'.
selfRef.ts(12,18): error TS2304: Cannot find name 'name'.


==== selfRef.ts (3 errors) ====
    module M
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    {
        export class Test
        {
          private name = "hello";
          public setName = function(value: string): void {
    	  (function () {
    	      name=value;
    	      ~~~~
!!! error TS2304: Cannot find name 'name'.
    	  })();
          }
          public getName = function(): string {
              return name;
                     ~~~~
!!! error TS2304: Cannot find name 'name'.
          }
        }
    }
    
    
    